k8s_manifests/gke_ingress_neg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bharath-app
  labels:
    run: bharath-app
spec:
  minReadySeconds: 60
  replicas: 3
  selector:
    matchLabels:
      run: bharath-app
  template:
    metadata:
      labels:
        run: bharath-app
    spec:
      containers:
      - image: k8s.gcr.io/serve_hostname:v1.4
        name: hostname
        ports:
        - containerPort: 9376
          protocol: TCP
      terminationGracePeriodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: bharath-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    run: bharath-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9376
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bharath-ingress
spec:
  backend:
    serviceName: bharath-service
    servicePort: 80
